// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Voxel can be added to a scene via animDown 1`] = `undefined`;

exports[`Voxel can be added to a scene via animUp 1`] = `undefined`;

exports[`Voxel can be added to and removed from a scene 1`] = `undefined`;

exports[`Voxel can create clones 1`] = `
Object {
  "x": 123,
  "y": 456,
  "z": 789,
}
`;

exports[`Voxel can get and set mesh 1`] = `
Mesh {
  "addEventListener": [Function],
  "getBack": [Function],
  "getBottom": [Function],
  "getFaces": [Function],
  "getFront": [Function],
  "getLeft": [Function],
  "getRight": [Function],
  "getTop": [Function],
  "removeEventListener": [Function],
  "serialize": [Function],
  "setBack": [Function],
  "setBottom": [Function],
  "setFaces": [Function],
  "setFront": [Function],
  "setLeft": [Function],
  "setRight": [Function],
  "setTop": [Function],
  "triggerEvent": [Function],
}
`;

exports[`Voxel can get and set mesh 2`] = `
Mesh {
  "addEventListener": [Function],
  "getBack": [Function],
  "getBottom": [Function],
  "getFaces": [Function],
  "getFront": [Function],
  "getLeft": [Function],
  "getRight": [Function],
  "getTop": [Function],
  "removeEventListener": [Function],
  "serialize": [Function],
  "setBack": [Function],
  "setBottom": [Function],
  "setFaces": [Function],
  "setFront": [Function],
  "setLeft": [Function],
  "setRight": [Function],
  "setTop": [Function],
  "triggerEvent": [Function],
}
`;

exports[`Voxel can get and set mesh 3`] = `
Mesh {
  "addEventListener": [Function],
  "getBack": [Function],
  "getBottom": [Function],
  "getFaces": [Function],
  "getFront": [Function],
  "getLeft": [Function],
  "getRight": [Function],
  "getTop": [Function],
  "removeEventListener": [Function],
  "serialize": [Function],
  "setBack": [Function],
  "setBottom": [Function],
  "setFaces": [Function],
  "setFront": [Function],
  "setLeft": [Function],
  "setRight": [Function],
  "setTop": [Function],
  "triggerEvent": [Function],
}
`;

exports[`Voxel can get and set mesh 4`] = `
Mesh {
  "addEventListener": [Function],
  "getBack": [Function],
  "getBottom": [Function],
  "getFaces": [Function],
  "getFront": [Function],
  "getLeft": [Function],
  "getRight": [Function],
  "getTop": [Function],
  "removeEventListener": [Function],
  "serialize": [Function],
  "setBack": [Function],
  "setBottom": [Function],
  "setFaces": [Function],
  "setFront": [Function],
  "setLeft": [Function],
  "setRight": [Function],
  "setTop": [Function],
  "triggerEvent": [Function],
}
`;

exports[`Voxel can handle left click events 1`] = `
Array [
  Array [
    "TopClick",
    Object {
      "target": Voxel {
        "addEventListener": [Function],
        "addToScene": [Function],
        "animDown": [Function],
        "animUp": [Function],
        "clone": [Function],
        "getAnimatedElement": [Function],
        "getDimension": [Function],
        "getDomElement": [Function],
        "getMesh": [Function],
        "getPosition": [Function],
        "getPositionX": [Function],
        "getPositionY": [Function],
        "getPositionZ": [Function],
        "removeEventListener": [Function],
        "removeFromScene": [Function],
        "removeParentScene": [Function],
        "setDimension": [Function],
        "setMesh": [Function],
        "setParentScene": [Function],
        "setPosition": [Function],
        "setPositionX": [Function],
        "setPositionY": [Function],
        "setPositionZ": [Function],
        "translate": [Function],
        "translateX": [Function],
        "translateY": [Function],
        "translateZ": [Function],
        "triggerEvent": [Function],
        "updateLightSource": [Function],
      },
    },
  ],
  Array [
    "BottomClick",
    Object {
      "target": Voxel {
        "addEventListener": [Function],
        "addToScene": [Function],
        "animDown": [Function],
        "animUp": [Function],
        "clone": [Function],
        "getAnimatedElement": [Function],
        "getDimension": [Function],
        "getDomElement": [Function],
        "getMesh": [Function],
        "getPosition": [Function],
        "getPositionX": [Function],
        "getPositionY": [Function],
        "getPositionZ": [Function],
        "removeEventListener": [Function],
        "removeFromScene": [Function],
        "removeParentScene": [Function],
        "setDimension": [Function],
        "setMesh": [Function],
        "setParentScene": [Function],
        "setPosition": [Function],
        "setPositionX": [Function],
        "setPositionY": [Function],
        "setPositionZ": [Function],
        "translate": [Function],
        "translateX": [Function],
        "translateY": [Function],
        "translateZ": [Function],
        "triggerEvent": [Function],
        "updateLightSource": [Function],
      },
    },
  ],
  Array [
    "FrontClick",
    Object {
      "target": Voxel {
        "addEventListener": [Function],
        "addToScene": [Function],
        "animDown": [Function],
        "animUp": [Function],
        "clone": [Function],
        "getAnimatedElement": [Function],
        "getDimension": [Function],
        "getDomElement": [Function],
        "getMesh": [Function],
        "getPosition": [Function],
        "getPositionX": [Function],
        "getPositionY": [Function],
        "getPositionZ": [Function],
        "removeEventListener": [Function],
        "removeFromScene": [Function],
        "removeParentScene": [Function],
        "setDimension": [Function],
        "setMesh": [Function],
        "setParentScene": [Function],
        "setPosition": [Function],
        "setPositionX": [Function],
        "setPositionY": [Function],
        "setPositionZ": [Function],
        "translate": [Function],
        "translateX": [Function],
        "translateY": [Function],
        "translateZ": [Function],
        "triggerEvent": [Function],
        "updateLightSource": [Function],
      },
    },
  ],
  Array [
    "BackClick",
    Object {
      "target": Voxel {
        "addEventListener": [Function],
        "addToScene": [Function],
        "animDown": [Function],
        "animUp": [Function],
        "clone": [Function],
        "getAnimatedElement": [Function],
        "getDimension": [Function],
        "getDomElement": [Function],
        "getMesh": [Function],
        "getPosition": [Function],
        "getPositionX": [Function],
        "getPositionY": [Function],
        "getPositionZ": [Function],
        "removeEventListener": [Function],
        "removeFromScene": [Function],
        "removeParentScene": [Function],
        "setDimension": [Function],
        "setMesh": [Function],
        "setParentScene": [Function],
        "setPosition": [Function],
        "setPositionX": [Function],
        "setPositionY": [Function],
        "setPositionZ": [Function],
        "translate": [Function],
        "translateX": [Function],
        "translateY": [Function],
        "translateZ": [Function],
        "triggerEvent": [Function],
        "updateLightSource": [Function],
      },
    },
  ],
  Array [
    "LeftClick",
    Object {
      "target": Voxel {
        "addEventListener": [Function],
        "addToScene": [Function],
        "animDown": [Function],
        "animUp": [Function],
        "clone": [Function],
        "getAnimatedElement": [Function],
        "getDimension": [Function],
        "getDomElement": [Function],
        "getMesh": [Function],
        "getPosition": [Function],
        "getPositionX": [Function],
        "getPositionY": [Function],
        "getPositionZ": [Function],
        "removeEventListener": [Function],
        "removeFromScene": [Function],
        "removeParentScene": [Function],
        "setDimension": [Function],
        "setMesh": [Function],
        "setParentScene": [Function],
        "setPosition": [Function],
        "setPositionX": [Function],
        "setPositionY": [Function],
        "setPositionZ": [Function],
        "translate": [Function],
        "translateX": [Function],
        "translateY": [Function],
        "translateZ": [Function],
        "triggerEvent": [Function],
        "updateLightSource": [Function],
      },
    },
  ],
  Array [
    "RightClick",
    Object {
      "target": Voxel {
        "addEventListener": [Function],
        "addToScene": [Function],
        "animDown": [Function],
        "animUp": [Function],
        "clone": [Function],
        "getAnimatedElement": [Function],
        "getDimension": [Function],
        "getDomElement": [Function],
        "getMesh": [Function],
        "getPosition": [Function],
        "getPositionX": [Function],
        "getPositionY": [Function],
        "getPositionZ": [Function],
        "removeEventListener": [Function],
        "removeFromScene": [Function],
        "removeParentScene": [Function],
        "setDimension": [Function],
        "setMesh": [Function],
        "setParentScene": [Function],
        "setPosition": [Function],
        "setPositionX": [Function],
        "setPositionY": [Function],
        "setPositionZ": [Function],
        "translate": [Function],
        "translateX": [Function],
        "translateY": [Function],
        "translateZ": [Function],
        "triggerEvent": [Function],
        "updateLightSource": [Function],
      },
    },
  ],
]
`;

exports[`Voxel can handle mesh change events 1`] = `
Array [
  Array [
    "MeshChange",
    Object {
      "mesh": Mesh {
        "addEventListener": [Function],
        "getBack": [Function],
        "getBottom": [Function],
        "getFaces": [Function],
        "getFront": [Function],
        "getLeft": [Function],
        "getRight": [Function],
        "getTop": [Function],
        "removeEventListener": [Function],
        "serialize": [Function],
        "setBack": [Function],
        "setBottom": [Function],
        "setFaces": [Function],
        "setFront": [Function],
        "setLeft": [Function],
        "setRight": [Function],
        "setTop": [Function],
        "triggerEvent": [Function],
      },
      "target": Voxel {
        "addEventListener": [Function],
        "addToScene": [Function],
        "animDown": [Function],
        "animUp": [Function],
        "clone": [Function],
        "getAnimatedElement": [Function],
        "getDimension": [Function],
        "getDomElement": [Function],
        "getMesh": [Function],
        "getPosition": [Function],
        "getPositionX": [Function],
        "getPositionY": [Function],
        "getPositionZ": [Function],
        "removeEventListener": [Function],
        "removeFromScene": [Function],
        "removeParentScene": [Function],
        "setDimension": [Function],
        "setMesh": [Function],
        "setParentScene": [Function],
        "setPosition": [Function],
        "setPositionX": [Function],
        "setPositionY": [Function],
        "setPositionZ": [Function],
        "translate": [Function],
        "translateX": [Function],
        "translateY": [Function],
        "translateZ": [Function],
        "triggerEvent": [Function],
        "updateLightSource": [Function],
      },
    },
  ],
]
`;

exports[`Voxel can handle right click events 1`] = `
Array [
  Array [
    "VoxelClick",
    Object {
      "target": Voxel {
        "addEventListener": [Function],
        "addToScene": [Function],
        "animDown": [Function],
        "animUp": [Function],
        "clone": [Function],
        "getAnimatedElement": [Function],
        "getDimension": [Function],
        "getDomElement": [Function],
        "getMesh": [Function],
        "getPosition": [Function],
        "getPositionX": [Function],
        "getPositionY": [Function],
        "getPositionZ": [Function],
        "removeEventListener": [Function],
        "removeFromScene": [Function],
        "removeParentScene": [Function],
        "setDimension": [Function],
        "setMesh": [Function],
        "setParentScene": [Function],
        "setPosition": [Function],
        "setPositionX": [Function],
        "setPositionY": [Function],
        "setPositionZ": [Function],
        "translate": [Function],
        "translateX": [Function],
        "translateY": [Function],
        "translateZ": [Function],
        "triggerEvent": [Function],
        "updateLightSource": [Function],
      },
    },
  ],
]
`;
